[tool.poetry]
name = "nowcastlib"
version = "2.1.0"
description = "🧙🔧 Utils that can be reused and shared across and beyond the ESO Nowcast project"
authors = [
  "Giulio Starace <giulio.starace@gmail.com>",
  "Giulio Starace <giulio.starace@partner.eso.org>",
]
readme = "README.md"
homepage = "https://giuliostarace.com/nowcastlib/"
repository = "https://github.com/thesofakillers/nowcastlib"
keywords = ["nowcast", "turbulence", "forecasting", "data-science", "time series"]
license = "GPL-3.0-only"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.6.9"
pandas = "1.1.5"
numpy = "1.18.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pipreqs = "^0.4.10"
black = "^20.8b1"
pylint = "^2.6.0"
pdoc3 = "^0.9.2"
jupyterlab = "^3.0.10"
jupyterlab-code-formatter = "^1.4.4"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
nbdime = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
