[tool.poetry]
name = "nowcastlib"
version = "3.0.11"
description = "🧙🔧 Utils that can be reused and shared across and beyond the ESO Nowcast project"
authors = [
  "Giulio Starace <giulio.starace@gmail.com>",
  "Giulio Starace <giulio.starace@partner.eso.org>",
]
readme = "README.md"
homepage = "https://giuliostarace.com/nowcastlib/"
repository = "https://github.com/thesofakillers/nowcastlib"
keywords = ["nowcast", "turbulence", "forecasting", "data-science", "time series"]
license = "GPL-3.0-only"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.4"
numpy = "^1.20.3"
ConfigArgParse = "^1.4.1"
attrs = "^21.2.0"
cattrs = "^1.7.1"
matplotlib = "^3.4.2"
scikit-learn = "^0.24.2"
skyfield = "^1.39"
importlib-metadata = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pipreqs = "^0.4.10"
black = "^21.5b2"
pylint = "^2.6.0"
pdoc3 = "^0.9.2"
jupyterlab-code-formatter = "^1.4.4"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
nbdime = "^3.1.0"
jupyterlab-spellchecker = "^0.6.0"
ipympl = "^0.7.0"
jupyter_nbextensions_configurator = "^0.4.1"
tables = "^3.6.1"
mypy = "^0.812"
jupyterlab = "^3.0.16"
pandas-stubs = "^1.1.0"

[tool.poetry.scripts]
nowcastlib = 'nowcastlib.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
